2004-12-09  Gary Cramblitt (PhantomsDad)
        * Require GStreamer >= 0.8.7.
        * Bug.  Always using default GStreamer sink in KTTSD.  Honor user's choice now.

2004-12-07  Gary Cramblitt (PhantomsDad)
        * Add Festival Czech voice.
        * Apply some Juk patches to GStreamerPlayer.

2004-12-06  Gary Cramblitt (PhantomsDad)
        * Initial, but primitive support for SSML with Hadifix.

2004-12-03  Gary Cramblitt (PhantomsDad)
        * Audio players are now plugins.  This permits distribution of binary packages
          without GStreamer being a mandatory dependency.

2004-12-02  Gary Cramblitt (PhantomsDad)
        * Bypass stretching (overall Speed setting) when utterance contains SSML.  sox
          mangles SSML pitch settings.

2004-12-01  Gary Cramblitt (PhantomsDad)
        * Some code reorganization.  New TalkerCode object in libkttsd.
        * Better Talker selection dialog when changing Talker in Jobs tab.

2004-11-29  Gary Cramblitt (PhantomsDad)
        * When clicking Test button, now honors users output method (arts or gstreamer) and
          overall Audio Speed setting.
        * Add option for GStreamer output sink.

2004-11-27  Gary Cramblitt (PhantomsDad)
        * Extremely rudimentary support for SSML/Sable using FestivalInt plugin.  If it works for
          you, it will be minor miracle.
        * In FestivalInt configuration dialog, do not enable OK button if EXE Path is invalid.
        * When Editing existing FestivalInt configuration, do not inadvertently change the selected
          voice when rescanning.
        * In FestivalInt configuration dialog, disable voice combo box until scan has been clicked.

2004-11-26  Gary Cramblitt (PhantomsDad)
        * Slight throughput improvement by eliminating pause at start of each Festival utterance.
        * Bug fix.  Can find synthesizers when HOME env variable is in the path.

2004-11-25  Gary Cramblitt (PhantomsDad)